# energy-forecast-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: eda.ipynb
src/monitoring/: drift.py
src/pipeline/: features.py  ingest.py
src/serving/: app.py
src/training/: promote.py  train.py
tests/: test_api.py  test_drift.py  test_features.py  test_ingest.py  test_promote.py  test_smoke.py  test_train.py
