[project]
name = "energy-forecast-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "evidently>=0.6",
    "holidays>=0.45",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
